--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,20 @@
 Package: sybil
 Type: Package
-Title: SyBiL - Systems Biology Library
-Version: 1.0.1
-Date: 2012-03-16
+Title: SyBiL - Efficient constrained based modelling in R
+Version: 1.0.2
+Date: 2012-04-20
 Authors@R: c(person("Gabriel", "Gelius-Dietrich", role = "cre", email =
         "geliudie@uni-duesseldorf.de"), person("C. Jonathan",
         "Fritzemeier", role = "ctb"), person("Rajen", "Piernikarczyk",
         role = "ctb"), person("Benjamin", "Braasch", role = "ctb"))
 Depends: R (>= 2.12.0), Matrix (>= 1.0-4), methods
-Suggests: glpkAPI (>= 1.2.1), clpAPI (>= 1.1.6), cplexAPI (>= 1.2.1),
+Suggests: glpkAPI (>= 1.2.1), cplexAPI (>= 1.2.1), clpAPI (>= 1.2.0),
         lpSolveAPI (>= 5.5.2.0), parallel, multicore, grid, lattice
-Description: A systems biology library for the analysis of metabolic
-        networks.
+Description: The package SyBiL is a Systems Biology Library for R,
+        implementing algorithms for constraint based analyses of
+        metabolic networks (e.g. flux-balance analysis (FBA), linera
+        MOMA, robustness analysis and flux variability analysis).
+URL: http://www.cs.uni-duesseldorf.de/AG/BI/Software/SyBiL
 License: GPL-3
 Collate: generics.R validmodelorg.R validoptsol.R validreactId.R
         modelorgClass.R modelorg_irrevClass.R optObjClass.R
@@ -22,12 +25,12 @@ Collate: generics.R validmodelorg.R validoptsol.R validreactId.R
         optsol_fluxVarClass.R optsol_fluxdelClass.R
         optsol_robAnaClass.R optsol_genedelClass.R
         optsol_doublefluxdelClass.R optsol_doublegenedelClass.R
-        checksolClass.R sybilLogClass.R blockedReact.R bracket_pairs.R
-        ceilValues.R changeBounds.R changeGPR.R changeObjFunc.R
-        checkDefaultMethod.R checkOptSol.R checkReactId.R
-        check_brackets.R createReactionString.R deadEndMetabolite.R
-        doInRound.R doubleFluxDel.R doubleGeneDel.R doubleReact.R
-        findExchReact.R floorValues.R fluxVar.R geneDel.R
+        checksolClass.R sybilLogClass.R addReact.R addExchReact.R
+        blockedReact.R bracket_pairs.R ceilValues.R changeBounds.R
+        changeGPR.R changeObjFunc.R checkDefaultMethod.R checkOptSol.R
+        checkReactId.R check_brackets.R createReactionString.R
+        deadEndMetabolite.R doInRound.R doubleFluxDel.R doubleGeneDel.R
+        doubleReact.R findExchReact.R floorValues.R fluxVar.R geneDel.R
         geneDeletion.R mod2irrev.R modelorg2text.R modelorg2tsv.R
         multiDel.R oneFluxDel.R oneGeneDel.R onlyChangeGPR.R
         onlyCheckGPR.R optObj_basicfunc.R optObj_lpSolveAPIcompat.R
@@ -36,9 +39,9 @@ Collate: generics.R validmodelorg.R validoptsol.R validreactId.R
         printObjFunc.R progress.R readTEXTmod.R readTSVmod.R
         reassignFwBwMatch.R rmReact.R robAna.R settings.R simpleFBA.R
         singletonMetabolite.R sybilStack.R ypd.R zzz.R
-Packaged: 2012-03-16 14:48:38 UTC; gabriel
+Packaged: 2012-04-20 10:55:44 UTC; gabriel
 Author: Gabriel Gelius-Dietrich [cre], C. Jonathan Fritzemeier [ctb],
         Rajen Piernikarczyk [ctb], Benjamin Braasch [ctb]
 Maintainer: Gabriel Gelius-Dietrich <geliudie@uni-duesseldorf.de>
 Repository: CRAN
-Date/Publication: 2012-03-16 15:43:09
+Date/Publication: 2012-04-20 16:07:48
