--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,6 +53,7 @@ Collate: generics.R validmodelorg.R validoptsol.R validreactId.R
         sysBiolAlg_lmomaClass.R sysBiolAlg_momaClass.R
         sysBiolAlg_mtfClass.R sysBiolAlg_mtfEasyConstraintClass.R
         sysBiolAlg_roomClass.R sybilLogClass.R upgradeModelorg.R
+        addMultiReact.R
 Packaged: 2016-06-06 12:23:22 UTC; jonathan
 Author: C. Jonathan Fritzemeier [cre, ctb],
   Gabriel Gelius-Dietrich [aut],
@@ -64,3 +65,4 @@ Author: C. Jonathan Fritzemeier [cre, ctb],
 NeedsCompilation: no
 Repository: CRAN
 Date/Publication: 2016-06-06 20:23:29
+RoxygenNote: 6.0.1
